--- a/inst/doc/exomeCopy.Rnw
+++ b/inst/doc/exomeCopy.Rnw
@@ -2,18 +2,14 @@
 % \VignetteDepends{methods, graphics, IRanges, GenomicRanges, Rsamtools, Biostrings}
 % \VignetteKeyword{CNV}
 
-\documentclass[a4paper]{article}
+\documentclass{article}
 \usepackage{natbib}
 \usepackage{Sweave}
+\usepackage[a4paper]{geometry}
 \usepackage{url}
 \usepackage{hyperref}
 \newcommand{\exomeCopy}{\textsf{exomeCopy} }
-
-\textwidth=6.5in
-\textheight=8.5in
-\oddsidemargin=-.1in
-\evensidemargin=-.1in
-\headheight=-.3in
+\SweaveOpts{keep.source=TRUE} 
 
 \begin{document}
 
@@ -26,15 +22,11 @@
 
 \maketitle
 
-<<options,echo=FALSE>>=
-options(width=72)
-@
-
-\tableofcontents
-
 \begin{abstract}
   \exomeCopy is an R package implementing a hidden Markov model\footnote{The manuscript describing the model, M.I. Love, A. Mysickova, R. Sun, V. Kalscheuer, M. Vingron, S.A. Haas, ``Modeling read counts for CNV detection in exome sequencing data'', is under review.} for predicting copy number variants (CNVs) from exome/targeted sequencing experiments without paired control experiments as in tumor/normal sequencing.\footnote{R packages which can be used for CNV detection in whole genome or tumor/normal paired exome sequencing data are \textsf{ReadDepth} and \textsf{ExomeCNV} respectively, available on CRAN.}  It models read counts in genomic ranges using negative binomial emission distributions depending on a hidden state of the copy count and on positional covariates such as GC-content and background read depth.  Normalization and segmentation are performed simultaneously, eliminating the need for preprocessing of the raw read counts.
 \end{abstract}
+
+\tableofcontents
 
 \section{Introduction}
 
@@ -66,12 +58,15 @@ The default setting of \texttt{subdivideGRanges} is to divide an input range int
 
 \begin{center}
 <<fig=TRUE>>=
-  plot(0,0,xlim=c(0,500),ylim=c(0,25),type="n",yaxt="n",xlab="width of input GRanges object",ylab="",main="Effect of subdivideGRanges")
+  plot(0,0,xlim=c(0,500),ylim=c(0,25),type="n",yaxt="n",ylab="", 
+       xlab="width of input GRanges object",
+       main="Effect of subdivideGRanges")
   abline(v=1:5*100,col="grey")
   for (i in 1:24) {
     gr <- GRanges(seqname="chr1",IRanges(start=1,width=(i*20)))
     sbd.gr <- subdivideGRanges(gr)
-    arrows(start(sbd.gr),rep(i,length(sbd.gr)),end(sbd.gr),rep(i,length(sbd.gr)),length=.04,angle=90,code=3)
+    arrows(start(sbd.gr),rep(i,length(sbd.gr)),end(sbd.gr),
+           rep(i,length(sbd.gr)),length=.04,angle=90,code=3)
   }
 @
 \end{center}
@@ -79,9 +74,11 @@ The default setting of \texttt{subdivideGRanges} is to divide an input range int
 Here we demonstrate reading in a targeted region BED file, converting to a \textit{GRanges} object and the result from calling \texttt{subdivideGRanges}.  Note that if the targeted region is read in from a BED file, one should add 1 to the starting position for representation as a \textit{GRanges} object.  
 
 <<>>=
-target.file <- system.file("extdata", "targets.bed", package="exomeCopy")
-target.df <- read.delim(target.file, header=FALSE, col.names=c("seqname","start","end")) 
-target <- GRanges(seqname=target.df$seqname, IRanges(start=target.df$start+1,end=target.df$end))
+target.file <- system.file("extdata","targets.bed",package="exomeCopy")
+target.df <- read.delim(target.file,header=FALSE, 
+                        col.names=c("seqname","start","end")) 
+target <- GRanges(seqname=target.df$seqname, 
+                  IRanges(start=target.df$start+1,end=target.df$end))
 target
 target.sub <- subdivideGRanges(target)
 target.sub
@@ -92,7 +89,7 @@ target.sub
 \texttt{countBamInGRanges} allows the user to count reads from a BAM read mapping file in genomic ranges covering the targeted region.  The function takes as input the BAM filename and a \textit{GRanges} object.  It returns a vector of counts, representing the number of sequenced read starts (leftmost position regardless of strand) with mapping quality above a minimum threshold (default of 1) for each genomic range.  Users should make sure the sequence names in the \textit{GRanges} object are the same as the sequence names in the BAM file (which can be listed using \texttt{scanBamHeader} in the \textsf{Rsamtools} package).  The BAM file requires a associated index file (see the man page for \texttt{indexBam} in the \textsf{Rsamtools} package).  We will count reads using the subdivided genomic ranges in \texttt{target.sub} and store the counts as a new value column, \texttt{sample1}.
 
 <<>>=
-bam.file <- system.file("extdata", "mapping.bam", package="exomeCopy")
+bam.file <- system.file("extdata","mapping.bam",package="exomeCopy")
 scanBamHeader(bam.file)[[1]]$targets
 levels(seqnames(target.sub))
 rdata <- RangedData(space=seqnames(target.sub),ranges=ranges(target.sub))
@@ -105,7 +102,7 @@ rdata
 \exomeCopy can model read counts from samples which are not perfectly correlated with background read depth using GC-content (ratio of G and C bases to total number of bases).  The GC-content of DNA fragments is known to be a factor in the efficiency of high-throughput sequencing.  Using \texttt{scanFa} in the \textsf{Rsamtools} package and a FASTA file of the reference genome, we can obtain a \textit{DNAStringSet} object for the DNA sequence of the genomic ranges.  Then \texttt{letterFrequency} in the \textsf{Biostrings} package can be used to tally the GC-content.
 
 <<>>=
-reference.file <- system.file("extdata", "reference.fa", package="exomeCopy")
+reference.file <- system.file("extdata","reference.fa",package="exomeCopy")
 target.dnastringset <- scanFa(reference.file,target.sub)
 getGCcontent <- function(x) {
   GC.count <- letterFrequency(x,"GC")
@@ -134,7 +131,9 @@ The genomic ranges in \texttt{exomecounts} have been filtered such that only ran
 
 \begin{center}
 <<fig=TRUE>>=
-plot(start(exomecounts),exomecounts$HG00551,xlim=c(0.8e6,1.8e6),xlab="genomic position",ylab="counts",main="HG00551 read counts in exonic ranges")
+plot(start(exomecounts),exomecounts$HG00551,xlim=c(0.8e6,1.8e6),
+     xlab="genomic position",ylab="counts",
+     main="HG00551 read counts in exonic ranges")
 @ 
 \end{center}
 
@@ -144,7 +143,8 @@ In order to run \exomeCopy, we first generate background read depth.  We extract
 
 <<>>=
 exome.samples <- grep("HG.+",colnames(exomecounts),value=TRUE)
-C <- as.data.frame(unlist(values(exomecounts)[,colnames(exomecounts) %in% exome.samples]))
+sample.columns <- colnames(exomecounts) %in% exome.samples
+C <- as.data.frame(unlist(values(exomecounts)[,sample.columns]))
 C.norm <- sweep(C,2,colMeans(C),"/")
 exomecounts[["bg"]] <- apply(C.norm,1,median)
 @ 
@@ -208,7 +208,8 @@ for (i in 1:4) {
   samplename <- exome.samples[i]
   contained <- unlist(ranges(exomecounts)) %in% bounds
   O <- exomecounts[[samplename]]
-  O[contained] <- O[contained] + cnv.mult[i]*rbinom(sum(contained),prob=cnv.probs[i],size=O[contained])
+  O[contained] <- O[contained] + (cnv.mult[i] * 
+    rbinom(sum(contained),prob=cnv.probs[i],size=O[contained]))
   exomecounts[[paste(samplename,cnv.type[i],sep=".")]] <- O
 }
 @ 
@@ -216,9 +217,12 @@ for (i in 1:4) {
 \begin{center}
 <<fig=TRUE>>=
 par(mfrow=c(2,1),mar=c(5,4,3,2))
-plot(start(exomecounts),exomecounts[["HG00731"]],xlab="genomic position",ylab="counts",main="Original counts")
+plot(start(exomecounts),exomecounts[["HG00731"]],
+     xlab="genomic position",ylab="counts",main="Original counts")
 abline(v=c(start(bounds),end(bounds)))
-plot(start(exomecounts),exomecounts[["HG00731.het.dup"]],xlab="genomic position",ylab="counts",main="Simulated heterozygous duplication")
+plot(start(exomecounts),exomecounts[["HG00731.het.dup"]],
+     xlab="genomic position",ylab="counts",
+     main="Simulated heterozygous duplication")
 abline(v=c(start(bounds),end(bounds)))
 @ 
 \end{center}
@@ -228,7 +232,8 @@ abline(v=c(start(bounds),end(bounds)))
 We can now run \exomeCopy using the read counts for one of the simulated CNV samples.  Later we will show how to write a simple wrapper function to loop the \texttt{exomeCopy} function over multiple chromosomes and samples.  
 
 <<>>=
-  fit <- exomeCopy(exomecounts["chr1"],sample.name="HG00731.het.dup",X.names=c("bg","GC","GC.sq","width"))
+  fit <- exomeCopy(exomecounts["chr1"],sample.name="HG00731.het.dup",
+                   X.names=c("bg","GC","GC.sq","width"))
   show(fit)
 @
 
@@ -269,7 +274,8 @@ nseqs <- length(seqs)
 nsamples <- length(samples)
 seq.loop <- rep(seqs,times=nsamples)
 sample.loop <- rep(samples,each=nseqs)
-fit.list <- lapply(seq_len(nseqs*nsamples),runExomeCopy,exomecounts,seq.loop,sample.loop)
+fit.list <- lapply(seq_len(nseqs*nsamples),
+                   runExomeCopy,exomecounts,seq.loop,sample.loop)
 @ 
 
 We can visualize the segments of constant predicted copy count for all simulated CNV samples.  The vertical lines indicate the start and end of the simulated CNVs.
@@ -299,8 +305,10 @@ If we plot the initial and final $\beta$ vectors from the 4 samples with simulat
 <<fig=TRUE>>=
 par(mfrow=c(2,2),mar=c(3,5,1,1))
 for (i in 1:4) {
-  barplot(rbind(fit.list[[i]]@final.par$beta,fit.list[[i]]@init.par$beta.hat),horiz=TRUE,las=1,beside=TRUE,col=c("white","darkgrey"),xlim=c(-150,350))
-  legend("topright",legend=c("initial","final"),fill=c("darkgrey","white"),cex=.75)
+  barplot(rbind(fit.list[[i]]@final.par$beta,fit.list[[i]]@init.par$beta.hat),
+          horiz=TRUE,las=1,beside=TRUE,col=c("white","darkgrey"),
+          xlim=c(-150,350))
+  legend("topright",legend=c("initial","final"),fill=c("darkgrey","white"))
 }
 @
 \end{center}
