--- a/inst/doc/exomeCopy.bib
+++ b/inst/doc/exomeCopy.bib
@@ -54,3 +54,22 @@
     volume = {19},
     year = {2009}
 }
+
+@article{Love2011Modeling,
+    author = {Love, Michael I. and My\v{s}i\v{c}kov\'{a}, Alena and Sun, Ruping and Kalscheuer, Vera and Vingron, Martin and Haas, Stefan A.},
+    citeulike-article-id = {10007512},
+    citeulike-linkout-0 = {http://dx.doi.org/10.2202/1544-6115.1732},
+    day = {08},
+    doi = {10.2202/1544-6115.1732},
+    issn = {1544-6115},
+    journal = {Statistical Applications in Genetics and Molecular Biology},
+    keywords = {cnv, exome},
+    month = nov,
+    number = {1},
+    posted-at = {2011-11-09 14:52:48},
+    priority = {2},
+    title = {{Modeling Read Counts for CNV Detection in Exome Sequencing Data}},
+    url = {http://dx.doi.org/10.2202/1544-6115.1732},
+    volume = {10},
+    year = {2011}
+}
