--- a/inst/doc/exomeCopy.Rnw
+++ b/inst/doc/exomeCopy.Rnw
@@ -5,15 +5,19 @@
 \documentclass{article}
 \usepackage{natbib}
 \usepackage{Sweave}
-\usepackage[a4paper]{geometry}
+\usepackage[a4paper,margin=1.25in]{geometry}
 \usepackage{url}
 \usepackage{hyperref}
 \newcommand{\exomeCopy}{\textsf{exomeCopy} }
-\SweaveOpts{keep.source=TRUE} 
+\SweaveOpts{keep.source=FALSE} 
 
 \begin{document}
 
 \setkeys{Gin}{width=0.6\textwidth}
+
+<<echo=FALSE>>=
+options(width = 70)
+@ 
 
 \title{CNV detection in exome sequencing data using \exomeCopy}
 \author{Michael Love\\
@@ -23,7 +27,7 @@
 \maketitle
 
 \begin{abstract}
-  \exomeCopy is an R package implementing a hidden Markov model for predicting copy number variants (CNVs) from exome/targeted sequencing experiments without paired control experiments as in tumor/normal sequencing.\footnote{The model implemented in this package is described in \citep{Love2011Modeling}.  R packages which can be used for CNV detection in whole genome or tumor/normal paired exome sequencing data include \textsf{ReadDepth} and \textsf{ExomeCNV} respectively, available on CRAN.}  It models read counts in genomic ranges using negative binomial emission distributions depending on a hidden state of the copy number and on positional covariates such as GC-content and background read depth.  Normalization and segmentation are performed simultaneously, eliminating the need for preprocessing of the raw read counts.
+  \exomeCopy is an R package implementing a hidden Markov model for predicting copy number variants (CNVs) from exome sequencing experiments without paired control experiments as in tumor/normal sequencing.\footnote{The model implemented in this package is described in \citep{Love2011Modeling}.  R packages which can be used for CNV detection in whole genome or tumor/normal paired exome sequencing data include \textsf{ReadDepth} and \textsf{ExomeCNV} respectively, available on CRAN.}  It models read counts in genomic ranges using negative binomial emission distributions depending on a hidden state of the copy number and on positional covariates such as GC-content and background read depth.  Normalization and segmentation are performed simultaneously, eliminating the need for preprocessing of the raw read counts.
 \end{abstract}
 
 \tableofcontents
@@ -38,11 +42,13 @@ The \exomeCopy package was designed to address the following situation:
   \item Individual samples can be more or less correlated with background read depth and have different dependencies on GC-content.
 \end{itemize}
 
-While exome sequencing is not designed for CNV genotyping, it can nevertheless be used for finding CNVs which overlap exons and are not common in the control set.  It can provide an independent data source to be used in combination with higher resolution array-based methods.  In this vignette we show how to prepare data, generate background read depth, simulate CNVs in read count data and recover CNVs using \exomeCopy.  We build a wrapper function for calling the \texttt{exomeCopy} function over multiple chromosomes and samples such that the operations can be assigned across workstations.
+While exome sequencing is not designed for CNV genotyping, it can nevertheless be used for finding CNVs which overlap exons and are not common in the control set.  It can provide an independent data source to be used in combination with higher resolution array-based methods.  In this vignette we show how to import experiment data, generate background read depth, and recover CNVs using \exomeCopy.  The \texttt{exomeCopy} function is applied per chromosome and per sample, so we will use a wrapper function to loop over multiple chromosomes and samples which can easily be distributed across a cluster.
 
 \section{Importing experiment data}
 
-The necessary genomic range information, read counts and positional covariates (background read depth and GC-content) should be stored in a \textit{RangedData} object.  The user must provide genomic ranges of targeted enrichment.  For exome sequencing, one can use exon annotations, which will be discussed in a later section.  The \exomeCopy package provides two convenience functions for preparing the genomic ranges and sample read counts: \texttt{subdivideGRanges} and \texttt{countBamInGRanges}.  In this vignette we will use a prepackaged \textit{RangedData} object containing real exome sequencing read counts.  Due to memory constraints, we cannot construct this object from scratch, but below we demonstrate with a simple example how to construct a \textit{RangedData} object from a BED file describing the targeted region, BAM files for the read mapping and a FASTA file for the reference sequence.
+The necessary genomic range information, read counts and positional covariates (background read depth and GC-content) should be stored in a \textit{RangedData} object.  The user must provide genomic ranges of targeted enrichment.  For exome sequencing, one can use exon annotations.  The \exomeCopy package provides the following convenience functions: \texttt{subdivideGRanges} for subdividing the target ranges into nearly-equal sized ranges, \texttt{countBamInGRanges} for counting reads from a BAM file in the target ranges, \texttt{getGCcontent} for calculating GC content in the target ranges, and \texttt{generateBackground} for calculating the median read depth over a set of background samples.
+
+In this vignette we will use a prepackaged \textit{RangedData} object containing real exome sequencing read counts.  To minimize memory size, we demonstrate with toy data how to construct a \textit{RangedData} object from a BED file describing the targeted region, BAM files for the read mapping and a FASTA file for the reference sequence.
 
 \subsection{Subdividing targeted regions}
 
@@ -58,15 +64,12 @@ The default setting of \texttt{subdivideGRanges} is to divide an input range int
 
 \begin{center}
 <<fig=TRUE>>=
-  plot(0,0,xlim=c(0,500),ylim=c(0,25),type="n",yaxt="n",ylab="", 
-       xlab="width of input GRanges object",
-       main="Effect of subdivideGRanges")
+  plot(0,0,xlim=c(0,500),ylim=c(0,25),type="n",yaxt="n",ylab="",xlab="width of input GRanges object",main="Effect of subdivideGRanges")
   abline(v=1:5*100,col="grey")
   for (i in 1:24) {
     gr <- GRanges(seqname="chr1",IRanges(start=1,width=(i*20)))
     sbd.gr <- subdivideGRanges(gr)
-    arrows(start(sbd.gr),rep(i,length(sbd.gr)),end(sbd.gr),
-           rep(i,length(sbd.gr)),length=.04,angle=90,code=3)
+    arrows(start(sbd.gr),rep(i,length(sbd.gr)),end(sbd.gr),rep(i,length(sbd.gr)),length=.04,angle=90,code=3)
   }
 @
 \end{center}
@@ -75,10 +78,8 @@ Here we demonstrate reading in a targeted region BED file, converting to a \text
 
 <<>>=
 target.file <- system.file("extdata","targets.bed",package="exomeCopy")
-target.df <- read.delim(target.file,header=FALSE, 
-                        col.names=c("seqname","start","end")) 
-target <- GRanges(seqname=target.df$seqname, 
-                  IRanges(start=target.df$start+1,end=target.df$end))
+target.df <- read.delim(target.file,header=FALSE,col.names=c("seqname","start","end")) 
+target <- GRanges(seqname=target.df$seqname,IRanges(start=target.df$start+1,end=target.df$end))
 target
 target.sub <- subdivideGRanges(target)
 target.sub
@@ -86,14 +87,19 @@ target.sub
 
 \subsection{Counting reads in genomic ranges}
 
-\texttt{countBamInGRanges} allows the user to count reads from a BAM read mapping file in genomic ranges covering the targeted region.  The function takes as input the BAM filename and a \textit{GRanges} object.  It returns a vector of counts, representing the number of sequenced read starts (leftmost position regardless of strand) with mapping quality above a minimum threshold (default of 1) for each genomic range.  Users should make sure the sequence names in the \textit{GRanges} object are the same as the sequence names in the BAM file (which can be listed using \texttt{scanBamHeader} in the \textsf{Rsamtools} package).  The BAM file requires a associated index file (see the man page for \texttt{indexBam} in the \textsf{Rsamtools} package).  We will count reads using the subdivided genomic ranges in \texttt{target.sub} and store the counts as a new value column, \texttt{sample1}.
+\texttt{countBamInGRanges} allows the user to count reads from a BAM read mapping file in genomic ranges covering the targeted region.  The function takes as input the BAM filename and a \textit{GRanges} object.  It returns a vector of counts, representing the number of sequenced read starts (leftmost position regardless of strand) with mapping quality above a minimum threshold (default of 1) for each genomic range.  It is also possible to count any overlapping reads and to remove duplicate reads mapping to the same position with the same strand (see \texttt{?countBamInGRanges}).
+
+Users should make sure the sequence names in the \textit{GRanges} object are the same as the sequence names in the BAM file (which can be listed using \texttt{scanBamHeader} in the \textsf{Rsamtools} package).  The BAM file requires a associated index file (see the man page for \texttt{indexBam} in the \textsf{Rsamtools} package).  We will count reads using the subdivided genomic ranges in \texttt{target.sub} and store the counts as a new value column, \texttt{sample1}.
 
 <<>>=
 bam.file <- system.file("extdata","mapping.bam",package="exomeCopy")
 scanBamHeader(bam.file)[[1]]$targets
 seqlevels(target.sub)
 rdata <- RangedData(space=seqnames(target.sub),ranges=ranges(target.sub))
-rdata[["sample1"]] <- countBamInGRanges(bam.file,target.sub)
+sample.df <- data.frame(samples="sample1",bam.files=bam.file,stringsAsFactors=FALSE)
+for (i in 1:nrow(sample.df)) {
+  rdata[[sample.df$samples[i]]] <- countBamInGRanges(sample.df$bam.files[i],target.sub)
+}
 rdata
 @
 
@@ -103,19 +109,11 @@ rdata
 
 <<>>=
 reference.file <- system.file("extdata","reference.fa",package="exomeCopy")
-target.dnastringset <- scanFa(reference.file,target.sub)
-getGCcontent <- function(x) {
-  GC.count <- letterFrequency(x,"GC")
-  all.count <- letterFrequency(x,"ATGC")
-  as.vector(ifelse(all.count==0,NA,GC.count/all.count))
-}
-rdata[["GC"]] <- getGCcontent(target.dnastringset)
+rdata[["GC"]] <- getGCcontent(target.sub, reference.file)
 rdata
 @ 
 
-In the following sections, we will continue with a dataset constructed using real targeted regions and exome sequencing data.
-
-\section{Exome sequencing data from 1000 Genomes Project}
+\subsection{Exome sequencing data from 1000 Genomes Project}
 
 For demonstrating the use of \exomeCopy, we have provided a sample dataset, \texttt{exomecounts}, of exome sequencing read counts.  The genomic ranges used in this dataset are generated from a small subset of the CCDS regions on chromosome 1 \citep{Pruitt2009Consensus}.  The regions are downloaded from the hg19 tables of the UCSC Genome Browser (\url{http://genome.ucsc.edu/cgi-bin/hgGateway}).  Alternatively, one could use the \textsf{GenomicFeatures} package to download the CCDS regions.  The original CCDS regions are subdivided using \texttt{subdivideGRanges} with default settings as in the example code above.  The CCDS regions are convenient to use as genomic ranges for CNV detection in exome sequencing data, as they are often in the center of the targeted region in exome enrichment protocols and tend to have less variable coverage than the flanking regions.
 
@@ -131,32 +129,38 @@ The genomic ranges in \texttt{exomecounts} have been filtered such that only ran
 
 \begin{center}
 <<fig=TRUE>>=
-plot(start(exomecounts),exomecounts$HG00551,xlim=c(0.8e6,1.8e6),
-     xlab="genomic position",ylab="counts",
-     main="HG00551 read counts in exonic ranges")
+plot(start(exomecounts),exomecounts$HG00551,xlim=c(0.8e6,1.8e6),xlab="genomic position",ylab="counts",main="HG00551 read counts in exonic ranges")
 @ 
 \end{center}
 
 \subsection{Generating background read depth}
 
-In order to run \exomeCopy, we first generate background read depth.  We extract a read counts data frame from the \textit{RangedData} object and divide each sample by its mean read count (column mean).  Our read depth background is the median of these normalized read counts over the 16 samples (row median).  We could at this point also store the standard deviation of the normalized read counts for a measure of read depth deviation at each range, but we will not use this information in this vignette.
+In order to run \exomeCopy, we first generate background read depth.  For demonstration of working with multiple chromosomes, we will copy the chr1 data as a new chromosome.  
 
 <<>>=
-exome.samples <- grep("HG.+",colnames(exomecounts),value=TRUE)
-sample.columns <- colnames(exomecounts) %in% exome.samples
-C <- as.data.frame(unlist(values(exomecounts)[,sample.columns]))
-C.norm <- sweep(C,2,colMeans(C),"/")
-exomecounts[["bg"]] <- apply(C.norm,1,median)
+chr1a <- exomecounts
+chr1a.ranges <- ranges(chr1a)
+names(chr1a.ranges) <- "chr1a"
+chr1a <- RangedData(chr1a.ranges,as.data.frame(exomecounts)[,-c(1:4)])
+exomecounts.plus <- c(exomecounts,chr1a)
+@ 
+
+We extract a read counts data frame from the \textit{RangedData} object and divide each sample by its mean read count (column mean).  Our read depth background is the median of these normalized read counts over the 16 samples (row median).  We also store the standard deviation of the normalized read counts for a measure of read depth deviation at each range, but we will not use covariate in this vignette.
+
+<<>>=
+exome.samples <- grep("HG.+",colnames(exomecounts.plus),value=TRUE)
+exomecounts.plus[["bg"]] <- generateBackground(exome.samples, exomecounts.plus, median)
+exomecounts.plus[["bg.sd"]] <- generateBackground(exome.samples, exomecounts.plus, sd)
 @ 
 
 The relationship between read counts and GC-content over the ranges varies across protocols and samples.  It can be roughly approximated per sample using second-order polynomial terms of GC-content.  We store the square of GC-content as a new value column.  Other functions of GC-content could be used as well.  We also store the width of the ranges as a value column.
 
 <<>>=
-exomecounts[["GC.sq"]] <- exomecounts$GC^2
-exomecounts[["width"]] <- width(exomecounts)
+exomecounts.plus[["GC.sq"]] <- exomecounts.plus$GC^2
+exomecounts.plus[["width"]] <- width(exomecounts.plus)
 @
 
-\section{Brief introduction of the model}
+\section{Introduction of the model}
  
 \exomeCopy models the sample read counts on one chromosome, $O$, as emitted observations of a hidden Markov model (HMM), where the hidden state is the copy number of the sample.  The emission distributions $f$ are modeled with negative binomial distributions, as the read counts from high-throughput sequencing are often overdispersed for the Poisson distribution.  
 
@@ -193,101 +197,91 @@ $$ f \sim  \textrm{NB}(O_t, \mu_{ti}, \phi_{t}) $$
 $$ \phi_{t} = y_{t*} \gamma $$
 
 Both $\mu_{ti}$ and $\phi_{t}$ must be positive, so negative estimates are replaced with a small positive number (\texttt{1e-8}).
-
-\section{Running \exomeCopy on simulated CNVs}
   
-Next we simulate CNVs in 4 samples representing regions with a copy number of 0,1,3 and 4, relative to a background copy number of 2.  This is accomplished by selecting a fraction of the reads contained in the CNV bounds and removing or doubling them.  The new counts with simulated CNVs are added as new value columns to the \textit{RangedData} object.  We then plot the original counts and the counts within a simulated heterozygous duplication.
+\section{Simulate CNVs}
+
+Next we simulate CNVs in 8 samples on both chromosomes representing regions with a copy number of 0,1,3 and 4, relative to a background copy number of 2.  This is accomplished by selecting a fraction of the reads contained in the CNV bounds and removing or doubling them.  
 
 <<>>=
+simulateCNV <- function(x,indices,multiply,prob) {
+  x[indices] <- x[indices] + multiply * rbinom(length(indices),prob=prob,size=x[indices])
+  return(x)
+}
+rdata <- exomecounts.plus
 set.seed(2)
-cnv.type <- c("hom.del","het.del","het.dup","hom.dup")
-cnv.probs <- c(.99,.5,.5,.95)
-cnv.mult <- c(-1,-1,1,1)
-bounds <- IRanges(start=3e6,end=4e6)
-for (i in 1:4) {
-  samplename <- exome.samples[i]
-  contained <- unlist(ranges(exomecounts)) %in% bounds
-  O <- exomecounts[[samplename]]
-  O[contained] <- O[contained] + (cnv.mult[i] * 
-    rbinom(sum(contained),prob=cnv.probs[i],size=O[contained]))
-  exomecounts[[paste(samplename,cnv.type[i],sep=".")]] <- O
+cnv.probs <- rep(c(.99,.5,.5,.95),each=2)
+cnv.mult <- rep(c(-1,1),each=4)
+for (i in 1:8) {
+  rdata[[exome.samples[i]]] <- simulateCNV(rdata[[exome.samples[i]]],(i*100 + 1):((i+1)*100),multiply=cnv.mult[i],prob=cnv.probs[i])
+  rdata[[exome.samples[i]]] <- simulateCNV(rdata[[exome.samples[i]]],1000 + (i*100 + 1):((i+1)*100),multiply=cnv.mult[i],prob=cnv.probs[i])
 }
 @ 
 
-\begin{center}
-<<fig=TRUE>>=
-par(mfrow=c(2,1),mar=c(5,4,3,2))
-plot(start(exomecounts),exomecounts[["HG00731"]],
-     xlab="genomic position",ylab="counts",main="Original counts")
-abline(v=c(start(bounds),end(bounds)))
-plot(start(exomecounts),exomecounts[["HG00731.het.dup"]],
-     xlab="genomic position",ylab="counts",
-     main="Simulated heterozygous duplication")
-abline(v=c(start(bounds),end(bounds)))
-@ 
-\end{center}
+\section{Running \exomeCopy}
 
-\subsection{Running \exomeCopy and inspecting the segmentation}
+\subsection{Running \exomeCopy on one sample, one chromosome}
 
 We can now run \exomeCopy using the read counts for one of the simulated CNV samples.  Later we will show how to write a simple wrapper function to loop the \texttt{exomeCopy} function over multiple chromosomes and samples.  We specify the possible copy number values with \texttt{S} and the expected copy number state with \texttt{d}.
 
 <<>>=
-  fit <- exomeCopy(exomecounts["chr1"],sample.name="HG00731.het.dup",
-                   X.names=c("bg","GC","GC.sq","width"),S=0:6,d=2)
+  fit <- exomeCopy(rdata["chr1"],sample.name=exome.samples[3],X.names=c("bg","GC","GC.sq","width"),S=0:6,d=2)
   show(fit)
 @
 
-After fitting, we call the function \texttt{copyCountSegments} on the \textit{ExomeCopy} object, which provides the segmentation with the predicted copy number and the number of input genomic ranges contained within each segment.  \exomeCopy correctly identifies the segment between 3-4 Mb as having copy number 3 against the background copy number 2.
+After fitting, we call the function \texttt{copyCountSegments} on the \textit{ExomeCopy} object, which provides the segmentation with the predicted copy number and the number of input genomic ranges contained within each segment.
 
 <<>>=
   copyCountSegments(fit)
 @
 
-Calling \texttt{plot} on the \textit{ExomeCopy} object draws segments of constant predicted copy number as colored horizontal lines and normalized read counts as points.  The vertical lines indicate the start and end of the simulated CNV of copy number 3.
+Calling \texttt{plot} on the \textit{ExomeCopy} object draws segments of constant predicted copy number as colored horizontal lines and normalized read counts as points.
 
 \begin{center}
 <<fig=TRUE>>=
-  cols <- c("red","orange","black","deepskyblue","blue","blue2","blue4")
-  plot(fit,col=cols)
-  abline(v=c(start(bounds),end(bounds)))
+  cnv.cols <- c("red","orange","black","deepskyblue","blue","blue2","blue4")
+  plot(fit,col=cnv.cols)
 @
 \end{center}
 
-\subsection{Looping \exomeCopy over multiple chromosomes/samples}
+\subsection{Looping \exomeCopy over multiple samples and chromosomes}
 
-In order to apply \exomeCopy to a full dataset of multiple chromosomes and samples, we write a wrapper function \texttt{runExomeCopy}.  This allows for distribution of jobs across workstations, for example.
+In order to apply \exomeCopy to a full dataset of multiple chromosomes and samples, we write a wrapper function \texttt{runExomeCopy}.  This allows for distribution of jobs across workstations, for example.  Keep in mind that the non-PAR region of chrX in male samples should be fitted separately, with \texttt{d = 1}.
 
 <<>>=
-runExomeCopy <- function(idx,rdata,seq.loop,sample.loop) {
-  seq.name <- seq.loop[idx]
-  sample.name <- sample.loop[idx]
-  exomeCopy(rdata[seq.name],sample.name,
-            X.names=c("bg","GC","GC.sq","width"),S=0:6,d=2)
+runExomeCopy <- function(sample.name,seqs) {
+  lapply(seqs,function(seq.name) exomeCopy(rdata[seq.name],sample.name,X.names=c("bg","GC","GC.sq","width"),S=0:6,d=2))
 }
 @ 
 
-We can now run \exomeCopy using either \texttt{lapply} or using a function like \texttt{clusterApplyLB} from the \textsf{snow} package.  We define an order of chromosome-sample pairs by constructing variables \texttt{seq.loop} and \texttt{sample.loop} with the \texttt{rep} function.  By progressing through these two vectors, we predict CNVs in all chromosomes for all samples.  We apply \texttt{runExomeCopy} over the 4 samples with simulated CNVs and across 1 chromosome, though this code could be used across multiple chromosomes as well.
+We can now run \exomeCopy using either \texttt{lapply} or using a function like \texttt{clusterApplyLB} from the \textsf{snow} package.  We apply \texttt{runExomeCopy} for 8 samples over 2 chromosomes and the result is stored as a named list of named lists.
 
 <<>>=
-seqs <- c("chr1")
-samples <- paste(exome.samples[1:4],cnv.type,sep=".")
-nseqs <- length(seqs)
-nsamples <- length(samples)
-seq.loop <- rep(seqs,times=nsamples)
-sample.loop <- rep(samples,each=nseqs)
-fit.list <- lapply(seq_len(nseqs*nsamples),
-                   runExomeCopy,exomecounts,seq.loop,sample.loop)
+seqs <- c("chr1","chr1a")
+names(seqs) <- seqs
+samples <- exome.samples[1:8]
+names(samples) <- samples
+t0 <- Sys.time()
+fit.list <- lapply(samples,runExomeCopy,seqs)
+t1 <- Sys.time()
+paste("~",round((as.numeric(t1 - t0) / 60) / (8 * sum(width(rdata))) * 32e6,1)," minutes for 1 sample, 32 Mb of target",sep="")
 @ 
 
-We can visualize the segments of constant predicted copy number for all simulated CNV samples.  The vertical lines indicate the start and end of the simulated CNVs.
+Using \texttt{compileCopyCountSegments} on the list of lists, we can compile the segments across samples.  We remove the segments with copy count 2.  As exome sequencing is subject to high variance in read counts, in some samples a few ranges with too high or low read counts are called as CNV, which we see in the next plot.  Often the majority of these cases can be removed by requiring a minimum number of ranges (for example requiring the \texttt{nranges} column returned by \texttt{copyCountSegments} to be greater than 5).
+
+<<>>=
+compiled.segments <- compileCopyCountSegments(fit.list)
+CNV.segments <- compiled.segments[compiled.segments$copy.count != 2 & compiled.segments$nranges > 5,]
+@ 
+
+Finally, we can plot the CNVs for each sequence across samples using \texttt{plotCompiledCNV} and specifying which sequence to plot.
 
 \begin{center}
 <<fig=TRUE>>=
-par(mfrow=c(4,1),mar=c(3,3,1,1))
-for (i in 1:4) {
-  plot(fit.list[[i]],main="",xlab="",ylab="",show.legend=FALSE,col=cols)
-  abline(v=c(start(bounds),end(bounds)))
-}
+plotCompiledCNV(CNV.segments=CNV.segments, seq.name="chr1", col=cnv.cols)
+@ 
+
+<<fig=TRUE>>=
+plotCompiledCNV(CNV.segments=CNV.segments, seq.name="chr1a", col=cnv.cols)
 @ 
 \end{center}
 
@@ -296,19 +290,17 @@ for (i in 1:4) {
 Finally, we can inspect a number of fitted parameters in the \textit{ExomeCopy} object, such as the $\beta$ vector which is adjusted in optimizing the likelihood of the HMM.  The $\beta$ vector is initialized using a linear regression of counts on the covariates, and this and other initial parameter values can be accessed in the \texttt{init.par} slot of the \textit{ExomeCopy} object.  These coefficients are adjusted while optimizing the likelihood of the HMM.  The final $\beta$ vector and other final parameter values are accessible in the \texttt{final.par} slot.
 
 <<>>=
-fit.list[[1]]@init.par$beta.hat
-fit.list[[1]]@final.par$beta
+fit.list[[1]][[1]]@init.par$beta.hat
+fit.list[[1]][[1]]@final.par$beta
 @ 
 
-If we plot the initial and final $\beta$ vectors from the 4 samples with simulated CNVs, we can observe that the $\beta$ vector varies across patients and that the coefficients which maximize the full HMM are not the same as the initial estimates from regression.
+If we plot the initial and final $\beta$ vectors from 8 samples on chr1, we can observe that the $\beta$ vector varies across patients and that the coefficients which maximize the full HMM are not the same as the initial estimates from regression.
 
 \begin{center}
 <<fig=TRUE>>=
-par(mfrow=c(2,2),mar=c(3,5,1,1))
-for (i in 1:4) {
-  barplot(rbind(fit.list[[i]]@final.par$beta,fit.list[[i]]@init.par$beta.hat),
-          horiz=TRUE,las=1,beside=TRUE,col=c("white","darkgrey"),
-          xlim=c(-150,350))
+par(mfrow=c(3,3),mar=c(3,5,1,1))
+for (i in 1:8) {
+  barplot(rbind(fit.list[[i]][[1]]@final.par$beta,fit.list[[i]][[1]]@init.par$beta.hat),horiz=TRUE,las=1,beside=TRUE,col=c("white","darkgrey"),xlim=c(-150,350))
   legend("topright",legend=c("initial","final"),fill=c("darkgrey","white"))
 }
 @
