fix copyCountSegments for all one state
git-svn-id: file:///home/git/hedgehog.fhcrc.org/bioconductor/trunk/madman/Rpacks/exomeCopy@64097 bc3139a8-67e5-0310-9ffc-ced21a209358

--- a/inst/doc/exomeCopy.bib
+++ b/inst/doc/exomeCopy.bib
@@ -69,7 +69,7 @@
     posted-at = {2011-11-09 14:52:48},
     priority = {2},
     title = {{Modeling Read Counts for CNV Detection in Exome Sequencing Data}},
-    url = {http://dx.doi.org/10.2202/1544-6115.1732},
+    url = {http://cmb.molgen.mpg.de/publications/Love_2011_exomeCopy.pdf},
     volume = {10},
     year = {2011}
 }
